Acabado de estilar la página Tutorial

--- a/Marcas/tutorial.html
+++ b/Marcas/tutorial.html
@@ -72,7 +72,7 @@
         </section>
         <section id="s-tutorial-play">
             <h2>Jugada</h2>
-            <div class="tutorial-background">
+            <div id="tutorial2" class="tutorial-background">
                 <div id="play-scores">
                     <div></div>
                     <ul>
@@ -115,13 +115,12 @@
                 </div>
                 <div id="card-position">
                     <figure>
-                        <p id="card-name-t2" style="visibility: hidden;"></p>
-                        <div class="card-placeholder"></div>
-                        <img id="card-t2" src="images/tutorial01_card03.avif" alt="1 de Bastos" style="visibility: hidden;" />
+                        <p id="card-name-t2">12 de espadas</p>
+                        <img id="card-t2" src="images/carta_01_bastos.avif" alt="1 de Bastos"/>
                     </figure>
                 </div>
-                <div id="msg-div" style="visibility: hidden;">
-                    <p id="msg-text"></p>
+                <div id="msg-div">
+                    <p id="msg-text">¡Has ganado! Eres candidato a la banca</p>
                 </div>
             </div>
             <div class="tutorial-buttons">
