Añadiendo imagenes en formato avif para el equipo

--- a/Marcas/equip.html
+++ b/Marcas/equip.html
@@ -42,7 +42,7 @@
                 </li>
                 <li>
                     <figure>
-                        <img src="images/logo.png" alt="Foto de Alejandro López">
+                        <img src="images/Alejandro_Lopez.avif" alt="Foto de Alejandro López">
                         <p>Alejandro López</p>
                     </figure>
                     <h3>Tareas</h3>
@@ -54,7 +54,7 @@
                 </li>
                 <li>
                     <figure>
-                        <img src="images/CarlosMedina.jpg" alt="Foto de Carlos Medina">
+                        <img src="images/CarlosMedina.avif" alt="Foto de Carlos Medina">
                         <p>Carlos Medina</p>
                     </figure>
                     <h3>Tareas</h3>
