Añadiendo nombre de equipo

--- a/Marcas/equip.html
+++ b/Marcas/equip.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="base.css" rel="stylesheet">
     <link href="equip.css" rel="stylesheet">
-    <title>Nombre grupo: Siete y Medio - Equipo</title>
+    <title>Team Ocarina: Siete y Medio - Equipo</title>
 </head>
 <body>
     <header>
@@ -26,7 +26,7 @@
     </header>
     <main>
         <section id="s-members">
-            <h2>Miembros</h2>
+            <h2>Miembros de Team Ocarina</h2>
             <ul>
                 <li>
                     <figure>
@@ -68,7 +68,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy Nombre del grupo</p>
+        <p>&copy Team Ocarina</p>
     </footer>
 </body>
 </html>
