--- a/Marcas/index.html
+++ b/Marcas/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="base.css" rel="stylesheet">
     <link href="index.css" rel="stylesheet">
-    <title>Nombre grupo: Siete y Medio</title>
+    <title>Team Ocarina: Siete y Medio</title>
 </head>
 <body>
     <header>
@@ -146,7 +146,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy Nombre del grupo</p>
+        <p>&copy Team Ocarina</p>
     </footer>
 </body>
 </html>
