--- a/Marcas/tutorial.html
+++ b/Marcas/tutorial.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="base.css" rel="stylesheet">
     <link href="tutorial.css" rel="stylesheet">
-    <title>Nombre grupo: Siete y Medio - Tutorial</title>
+    <title>Team Ocarina: Siete y Medio - Tutorial</title>
 </head>
 <body>
     <header>
@@ -130,7 +130,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy Nombre del grupo</p>
+        <p>&copy Team Ocarina</p>
     </footer>
     <script type="text/javascript" src="tutorial.js"></script>
 </body>
