--- a/Marcas/programacion.html
+++ b/Marcas/programacion.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="base.css" rel="stylesheet">
-    <title>Nombre grupo: Siete y Medio - Programación</title>
+    <title>Team Ocarina: Siete y Medio - Programación</title>
 </head>
 <body>
     <header>
@@ -38,7 +38,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy Nombre del grupo</p>
+        <p>&copy Team Ocarina</p>
     </footer>
 </body>
 </html>
