--- a/Marcas/programacion.html
+++ b/Marcas/programacion.html
@@ -26,53 +26,59 @@
     <main>
         <section id="s-bank-logic">
             <h2>Lógica de juego de la banca</h2>
-            <p>La lógica de la banca se trata en las funciones creadas para el funcionamiento del juego, una gran cantidad de funciones tienen un comportamiento específico
+            <p>
+                La lógica de la banca se trata en las funciones creadas para el funcionamiento del juego, una gran cantidad de funciones tienen un comportamiento específico
                 en caso de que el jugador argumento con el que se las llama sea banca.
                 Un ejemplo de esto es la funcion cpu_demand_card() en el módulo players.
                 Esta función devuelve True o False dependiendo del riesgo de pasarse al ordenar una carta, y en caso de que sea banca también tiene en cuenta los jugadores
                 que tienen más puntos que ella en ese momento.
                 <br>
                 <br>
-                Cuando es el turno del jugador banca, hay diferencias claras en caso de que sea humana o bot.
-                
+                Cuando es el turno del jugador banca, hay diferencias claras en caso de que sea humana o bot. 
             </p>
             <ul>
-                <li><h3>Banca humana</h3>
-                <p>En caso de que la banca sea un jugador humano, puede hacer las mismas acciones que un jugador no banca. Es decir, ver estados, pedir cartas y plantarse.
-
-                </p></li>
-
-                <li><h3>Banca bot</h3>
-                <p>En caso de que la banca sea un jugador bot, demanda cartas mientras la función anteriormente dicha (cpu_demand_card()) devuelva True</p></li>
+                <li>
+                    <h3>Banca humana</h3>
+                    <p>En caso de que la banca sea un jugador humano, puede hacer las mismas acciones que un jugador no banca. Es decir, ver estados, pedir cartas y plantarse.</p>
+                </li>
+                <li>
+                    <h3>Banca bot</h3>
+                    <p>En caso de que la banca sea un jugador bot, demanda cartas mientras la función anteriormente dicha (cpu_demand_card()) devuelva True</p>
+                </li>
             </ul>
-
             <h3>Otras funciones que tienen en cuenta la banca incluyen:</h3>
             <ul>
-                <li><p><b>check_bank_status():</b> Esta función se encarga de comprobar al final de cada ronda si por cualquier motivo la banca debe pasar a otro jugador,
-                motivos como banca eliminada o un jugador ha sacado 7.5 y la banca no.</p></li>
-
-                <li><p><b>distribute_points():</b> Esta función junto con ayuda de otras funciones auxiliares se encarga de repartir puntos a los ganadores y quitarselos
-                a los perdedores, teniendo en cuenta las multiples situaciones en las que la banca puede ganar y perder contra múltiples personas en la misma ronda,
-                por ello siempre que hay varios perdedores que no son la banca lo primero que se hace es otorgar los puntos a la banca para que siempre tenga el
-                máximo número de puntos para repartir al resto de jugadores contra los que ha perdido</p></li>
-
-                <li><p><b>check_losers_winners():</b> Función auxiliar de distribute_points, se encarga de detectar a los ganadores y perdedores de cada ronda, en caso
-                de que la banca haya sacado 7.5 se añade como perdedores a todos los jugadores menos la banca.</p></li>
+                <li>
+                    <p>
+                        <b>check_bank_status():</b> Esta función se encarga de comprobar al final de cada ronda si por cualquier motivo la banca debe pasar a otro jugador,
+                        motivos como banca eliminada o un jugador ha sacado 7.5 y la banca no.
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        <b>distribute_points():</b> Esta función junto con ayuda de otras funciones auxiliares se encarga de repartir puntos a los ganadores y quitarselos
+                        a los perdedores, teniendo en cuenta las multiples situaciones en las que la banca puede ganar y perder contra múltiples personas en la misma ronda,
+                        por ello siempre que hay varios perdedores que no son la banca lo primero que se hace es otorgar los puntos a la banca para que siempre tenga el
+                        máximo número de puntos para repartir al resto de jugadores contra los que ha perdido
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        <b>check_losers_winners():</b> Función auxiliar de distribute_points, se encarga de detectar a los ganadores y perdedores de cada ronda, en caso
+                        de que la banca haya sacado 7.5 se añade como perdedores a todos los jugadores menos la banca.
+                     </p>
+                </li>
             </ul>
-
         </section>
         <section id="s-bot-logic">
             <h2>Lógica de juego de un bot</h2>
             <p>La lógica de los bots se trata comprobando si el jugador es humano o no y actuando en consecuencia.</p>
-
-            <p>Por ejemplo en la lógica al principio de las rondas se itera sobre todos los jugadores para que hagan sus apuestas, en caso de que sean humanos se hace
+            <p>
+                Por ejemplo en la lógica al principio de las rondas se itera sobre todos los jugadores para que hagan sus apuestas, en caso de que sean humanos se hace
                 de forma manual, y en caso de que sean bots se hace de forma automática con la función cpu_make_bet(), la cual teniendo en cuenta el "tipo" de jugador 
                 (Cautious, Moderated, Bold) genera un número aleatorio como apuesta de acuerdo a su comportamiento según los puntos disponibles del jugador.
             </p>
-
-            <p>Después a la hora de pedir cartas, se comprueba el que pueda pedir cartas con la función mencionada anteriormente (cpu_demand_card()), y mientras
-                sea True sigue pidiendo.
-            </p>
+            <p>Después, a la hora de pedir cartas, se comprueba el que pueda pedir cartas con la función mencionada anteriormente (cpu_demand_card()), y mientras sea True sigue pidiendo.</p>
         </section>
         <section id="s-player-priority-logic">
             <h2>Establecimiento de la prioridad inicial de los jugadores</h2>
@@ -80,7 +86,8 @@
             <ol>
                 <li><p>Primero se le reparte una carta a cada jugador y se asigna dicha carta a la entrada "initialCard" en el diccionario de cada jugador</p></li>
                 <li><p>Después se crea un diccionario con cada jugador como clave y el valor y prioridad de la carta como entradas</p></li>
-                <li><p>Acto seguido, con ayuda de una función auxiliar sort_priorities() se devuelve una lista con los jugadores ordenados según prioridad de menor a mayor,
+                <li>
+                    <p>Acto seguido, con ayuda de una función auxiliar sort_priorities() se devuelve una lista con los jugadores ordenados según prioridad de menor a mayor,
                     siendo la banca el último de estos</p>
                 </li>
                 <li><p>Por último se asigna al último jugador de la lista como banca</p></li>
@@ -88,6 +95,63 @@
         </section>
         <section id="s-data-bbdd">
             <h2>Inserción en BBDD de los datos del juego</h2>
+            <p>
+                En general, la ejecución de cualquier conjunto de sentencias en la BBDD se efectua en la función execute_transaction_in_db() del módulo db_access_config,
+                la cual utiliza las credenciales del archivo .env y estos dos módulos externos:
+            </p>
+            <dl>
+                <dt>sshtunnel</dt><dd>Se conecta a la máquina virtual de Azure mediante un túnel de ssh.</dd>
+                <dt>mysql-connector</dt><dd>Desde la máquina, se conecta al mysql.</dd>
+            </dl>
+            <p>Esta función también se llama para las otras interacciones con la BBDD:</p>
+            <ul>
+                <li>añadir, mostrar y eliminar jugadores</li>
+                <li>consultar el ranking y los informes</li>
+            </ul>
+            <p>
+                En el caso particular de inserir los datos del juego, 
+                la función insert_game_into_db() del módulo game almacena diversos datos en tres tablas: 
+                cardgame, player_game y playergame_round.
+                A continuación, se detallan los pasos para obtener los datos que se deben guardar en cada tabla.
+            </p>
+            <ul>
+                <li>
+                    <h3>Tabla cardgame</h3>
+                    <ol>
+                        <li>Al principio de la partida, se guarda la fecha y hora actual con la sentencia "SELECT now();".</li>
+                        <li>Después de cada ronda, se suma 1 al contador de rondas totales trascurridas.</li>
+                        <li>Al final de la partida, se vuelve a guardar la fecha y hora actual.</li>
+                    </ol>
+                </li>
+                <li>
+                    <h3>Tabla player_game</h3>
+                    <ol>
+                        <li>Al principio de la partida, se almacenan las cartas iniciales de los jugadores en una clave de sus diccionarios.</li>
+                        <li>
+                            También al inicio, con la ayuda de la vista INFORMATION_SCHEMA.TABLES,
+                            se determina de antemano cuál será la id autoincrementada de la partida.
+                            Este dato también se usa en la tabla player_game_round.
+                        </li>
+                        <li>
+                            No es necesario almacenar los puntos al empezar y acabar la partida en claves por separado.
+                            Esto es porque los puntos iniciales siempre son 20 y los "puntos finales" equivalen a los "puntos actuales" al final de la partida. 
+                        </li>
+                    </ol>
+                </li>
+                <li>
+                    <h3>Datos de la tabla player_game_round</h3>
+                    <ol>
+                        <li>Al principio de cada ronda, se almacenan los puntos iniciales de cada jugador en una variable.</li>
+                        <li>Al final de cada ronda, se almacenan los datos relevantes de cada jugador en un diccionario y se añade a una lista de todas las rondas.</li>
+                    </ol>
+                </li>
+            </ul>
+            <p>Respecto a la función en sí, hace lo siguiente: </p>
+            <ol>
+                <li>Toma como parámetros todos las variables necesarias.</li>
+                <li>Se organizan las variables de cardgame en un diccionario y las de player_game en una lista de diccionarios.</li>
+                <li>Por último, se generan las tres sentencias INSERT INTO con la función auxiliar insert_query() y se ejecutan en conjunto como una transacción.</li>
+            </ol>
         </section>
     </main>
     <footer>
