Añadiendo imágen de Álvaro al equipo

--- a/Marcas/equip.html
+++ b/Marcas/equip.html
@@ -30,7 +30,7 @@
             <ul>
                 <li>
                     <figure>
-                        <img src="images/logo.png" alt="Foto de Álvaro Armas">
+                        <img src="images/Alvaro_Armas.avif" alt="Foto de Álvaro Armas">
                         <p>Álvaro Armas</p>
                     </figure>
                     <h3>Tareas</h3>
