--- a/Marcas/programacion.html
+++ b/Marcas/programacion.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="base.css" rel="stylesheet">
+    <link href="programacion.css" rel="stylesheet">
     <title>Team Ocarina: Siete y Medio - Programación</title>
 </head>
 <body>
@@ -29,8 +30,8 @@
             <p>
                 La lógica de la banca se trata en las funciones creadas para el funcionamiento del juego, una gran cantidad de funciones tienen un comportamiento específico
                 en caso de que el jugador argumento con el que se las llama sea banca.
-                Un ejemplo de esto es la funcion cpu_demand_card() en el módulo players.
-                Esta función devuelve True o False dependiendo del riesgo de pasarse al ordenar una carta, y en caso de que sea banca también tiene en cuenta los jugadores
+                Un ejemplo de esto es la funcion <strong>cpu_demand_card()</strong> en el módulo <em>players</em>.
+                Esta función devuelve <strong>True o False dependiendo del riesgo de pasarse al ordenar una carta</strong>, y en caso de que sea banca también tiene en cuenta los jugadores
                 que tienen más puntos que ella en ese momento.
                 <br>
                 <br>
@@ -40,10 +41,11 @@
                 <li>
                     <h3>Banca humana</h3>
                     <p>En caso de que la banca sea un jugador humano, puede hacer las mismas acciones que un jugador no banca. Es decir, ver estados, pedir cartas y plantarse.</p>
+                    <br>
                 </li>
                 <li>
                     <h3>Banca bot</h3>
-                    <p>En caso de que la banca sea un jugador bot, demanda cartas mientras la función anteriormente dicha (cpu_demand_card()) devuelva True</p>
+                    <p>En caso de que la banca sea un jugador bot, demanda cartas mientras la función anteriormente dicha (<strong>cpu_demand_card()</strong>) devuelva True.</p>
                 </li>
             </ul>
             <h3>Otras funciones que tienen en cuenta la banca incluyen:</h3>
@@ -59,7 +61,7 @@
                         <b>distribute_points():</b> Esta función junto con ayuda de otras funciones auxiliares se encarga de repartir puntos a los ganadores y quitarselos
                         a los perdedores, teniendo en cuenta las multiples situaciones en las que la banca puede ganar y perder contra múltiples personas en la misma ronda,
                         por ello siempre que hay varios perdedores que no son la banca lo primero que se hace es otorgar los puntos a la banca para que siempre tenga el
-                        máximo número de puntos para repartir al resto de jugadores contra los que ha perdido
+                        máximo número de puntos para repartir al resto de jugadores contra los que ha perdido.
                     </p>
                 </li>
                 <li>
@@ -75,82 +77,84 @@
             <p>La lógica de los bots se trata comprobando si el jugador es humano o no y actuando en consecuencia.</p>
             <p>
                 Por ejemplo en la lógica al principio de las rondas se itera sobre todos los jugadores para que hagan sus apuestas, en caso de que sean humanos se hace
-                de forma manual, y en caso de que sean bots se hace de forma automática con la función cpu_make_bet(), la cual teniendo en cuenta el "tipo" de jugador 
-                (Cautious, Moderated, Bold) genera un número aleatorio como apuesta de acuerdo a su comportamiento según los puntos disponibles del jugador.
+                de forma manual, y en caso de que sean bots se hace de forma automática con la función <strong>cpu_make_bet()</strong>, la cual teniendo en cuenta el "<em>tipo</em>" de jugador 
+                (<em>Cautious</em>, <em>Moderated</em>, <em>Bold</em>) genera un número aleatorio como apuesta de acuerdo a su comportamiento según los puntos disponibles del jugador.
             </p>
-            <p>Después, a la hora de pedir cartas, se comprueba el que pueda pedir cartas con la función mencionada anteriormente (cpu_demand_card()), y mientras sea True sigue pidiendo.</p>
+            <p>Después, a la hora de pedir cartas, se comprueba el que pueda pedir cartas con la función mencionada anteriormente (<strong>cpu_demand_card()</strong>), y mientras sea True sigue pidiendo.</p>
         </section>
         <section id="s-player-priority-logic">
             <h2>Establecimiento de la prioridad inicial de los jugadores</h2>
-            <p>La asignación de prioridades iniciales se realiza usando la función assign_priority(), la cual funciona de la siguiente manera: </p>
+            <p>La asignación de prioridades iniciales se realiza usando la función <strong>assign_priority()</strong>, la cual funciona de la siguiente manera: </p>
             <ol>
-                <li><p>Primero se le reparte una carta a cada jugador y se asigna dicha carta a la entrada "initialCard" en el diccionario de cada jugador</p></li>
-                <li><p>Después se crea un diccionario con cada jugador como clave y el valor y prioridad de la carta como entradas</p></li>
+                <li><p>Primero se le reparte una carta a cada jugador y se asigna dicha carta a la entrada "<em>initialCard</em>" en el diccionario de cada jugador.</p></li>
+                <li><p>Después se crea un diccionario con cada jugador como clave y el valor y prioridad de la carta como entradas.</p></li>
                 <li>
-                    <p>Acto seguido, con ayuda de una función auxiliar sort_priorities() se devuelve una lista con los jugadores ordenados según prioridad de menor a mayor,
-                    siendo la banca el último de estos</p>
+                    <p>Acto seguido, con ayuda de una función auxiliar <strong>sort_priorities()</strong> se devuelve una lista con los jugadores ordenados según prioridad de menor a mayor,
+                    siendo la banca el último de estos.</p>
                 </li>
-                <li><p>Por último se asigna al último jugador de la lista como banca</p></li>
+                <li><p>Por último se asigna al último jugador de la lista como banca.</p></li>
             </ol>
         </section>
         <section id="s-data-bbdd">
             <h2>Inserción en BBDD de los datos del juego</h2>
             <p>
-                En general, la ejecución de cualquier conjunto de sentencias en la BBDD se efectua en la función execute_transaction_in_db() del módulo db_access_config,
-                la cual utiliza las credenciales del archivo .env y estos dos módulos externos:
+                En general, la ejecución de cualquier conjunto de sentencias en la BBDD se efectua en la función <strong>execute_transaction_in_db()</strong> del módulo <strong>db_access_config</strong>,
+                la cual utiliza las credenciales del archivo <em>.env</em> y estos dos módulos externos:
             </p>
             <dl>
-                <dt>sshtunnel</dt><dd>Se conecta a la máquina virtual de Azure mediante un túnel de ssh.</dd>
-                <dt>mysql-connector</dt><dd>Desde la máquina, se conecta al mysql.</dd>
+                <dt><p><em>sshtunnel</em></p></dt><dd><p>Se conecta a la máquina virtual de Azure mediante un túnel de ssh.</p></dd>
+                <dt><p><em>mysql-connector</em></p></dt><dd><p>Desde la máquina, se conecta al mysql.</p></dd>
             </dl>
             <p>Esta función también se llama para las otras interacciones con la BBDD:</p>
             <ul>
-                <li>añadir, mostrar y eliminar jugadores</li>
-                <li>consultar el ranking y los informes</li>
+                <li class="dot-list"><p>añadir, mostrar y eliminar jugadores</p></li>
+                <li class="dot-list"><p>consultar el ranking y los informes</p></li>
             </ul>
             <p>
                 En el caso particular de inserir los datos del juego, 
-                la función insert_game_into_db() del módulo game almacena diversos datos en tres tablas: 
-                cardgame, player_game y playergame_round.
+                la función <strong>insert_game_into_db()</strong> del módulo game almacena diversos datos en tres tablas: 
+                <strong>cardgame</strong>, <strong>player_game</strong> y <strong>playergame_round</strong>.
                 A continuación, se detallan los pasos para obtener los datos que se deben guardar en cada tabla.
             </p>
             <ul>
                 <li>
-                    <h3>Tabla cardgame</h3>
+                    <h3>Tabla <em>cardgame</em></h3>
                     <ol>
-                        <li>Al principio de la partida, se guarda la fecha y hora actual con la sentencia "SELECT now();".</li>
-                        <li>Después de cada ronda, se suma 1 al contador de rondas totales trascurridas.</li>
-                        <li>Al final de la partida, se vuelve a guardar la fecha y hora actual.</li>
+                        <li><p>Al principio de la partida, se guarda la fecha y hora actual con la sentencia "<em>SELECT now();</em>".</p></li>
+                        <li><p>Después de cada ronda, se suma 1 al contador de rondas totales trascurridas.</p></li>
+                        <li><p>Al final de la partida, se vuelve a guardar la fecha y hora actual.</p></li>
                     </ol>
                 </li>
                 <li>
-                    <h3>Tabla player_game</h3>
+                    <h3>Tabla <em>player_game</em></h3>
                     <ol>
-                        <li>Al principio de la partida, se almacenan las cartas iniciales de los jugadores en una clave de sus diccionarios.</li>
-                        <li>
-                            También al inicio, con la ayuda de la vista INFORMATION_SCHEMA.TABLES,
+                        <li><p>Al principio de la partida, se almacenan las cartas iniciales de los jugadores en una clave de sus diccionarios.</p></li>
+                        <li><p>
+                            También al inicio, con la ayuda de la vista <strong>INFORMATION_SCHEMA.TABLES</strong>,
                             se determina de antemano cuál será la id autoincrementada de la partida.
-                            Este dato también se usa en la tabla player_game_round.
+                            Este dato también se usa en la tabla <strong>player_game_round</strong>.</p>
                         </li>
                         <li>
+                            <p>
                             No es necesario almacenar los puntos al empezar y acabar la partida en claves por separado.
-                            Esto es porque los puntos iniciales siempre son 20 y los "puntos finales" equivalen a los "puntos actuales" al final de la partida. 
+                            Esto es porque los puntos iniciales siempre son 20 y los "<em>puntos finales</em>" equivalen a los "<em>puntos actuales</em>" al final de la partida. </p>
                         </li>
                     </ol>
                 </li>
                 <li>
-                    <h3>Datos de la tabla player_game_round</h3>
+                    <h3>Datos de la tabla <em>player_game_round</em></h3>
                     <ol>
-                        <li>Al principio de cada ronda, se almacenan los puntos iniciales de cada jugador en una variable.</li>
-                        <li>Al final de cada ronda, se almacenan los datos relevantes de cada jugador en un diccionario y se añade a una lista de todas las rondas.</li>
+                        <li><p>Al principio de cada ronda, se almacenan los puntos iniciales de cada jugador en una variable.</p></li>
+                        <li><p>Al final de cada ronda, se almacenan los datos relevantes de cada jugador en un diccionario y se añade a una lista de todas las rondas.</p></li>
                     </ol>
                 </li>
             </ul>
-            <p>Respecto a la función en sí, hace lo siguiente: </p>
+            <br>
+            <p>Respecto a la función en sí, hace lo siguiente:</p>
             <ol>
                 <li>Toma como parámetros todos las variables necesarias.</li>
-                <li>Se organizan las variables de cardgame en un diccionario y las de player_game en una lista de diccionarios.</li>
-                <li>Por último, se generan las tres sentencias INSERT INTO con la función auxiliar insert_query() y se ejecutan en conjunto como una transacción.</li>
+                <li>Se organizan las variables de cardgame en un diccionario y las de <em>player_game</em> en una lista de diccionarios.</li>
+                <li>Por último, se generan las tres sentencias <strong>INSERT INTO</strong> con la función auxiliar <strong>insert_query()</strong> y se ejecutan en conjunto como una transacción.</li>
             </ol>
         </section>
     </main>
