Haciendo responsive el disenño de las 4 páginas

--- a/Marcas/programacion.html
+++ b/Marcas/programacion.html
@@ -130,7 +130,7 @@
                     <ol>
                         <li><p>Al principio de la partida, se almacenan las cartas iniciales de los jugadores en una clave de sus diccionarios.</p></li>
                         <li><p>
-                            También al inicio, con la ayuda de la vista <strong>INFORMATION_SCHEMA.TABLES</strong>,
+                            También al inicio, con la ayuda de la vista <strong>INFORMATION_SCHEMA TABLES</strong>,
                             se determina de antemano cuál será la id autoincrementada de la partida.
                             Este dato también se usa en la tabla <strong>player_game_round</strong>.</p>
                         </li>
