Pasando a menú hamburguesa en pantalla reducida

--- a/Marcas/tutorial.html
+++ b/Marcas/tutorial.html
@@ -15,12 +15,16 @@
                 <img src="images/logo.png" alt="Logo Siete y Medio" />
             </figure>
         </div>
-        <nav>
+        <div class="menu-icon" onclick="toggleMenu()">
+            &#9776;
+        </div>
+        <nav id="menu">
             <ul>
                 <li><a href="index.html" rel="no_referer">Inicio</a></li>
                 <li class="active"><a href="#" rel="no_referer">Tutorial</a></li>
                 <li><a href="equip.html" rel="no_referer">Equipo</a></li>
                 <li><a href="programacion.html" rel="no_referer">Programación</a></li>
+                <li><a href="informs.html" rel="no_referer">Informes</a></li>
             </ul>
         </nav>
     </header>
@@ -132,6 +136,6 @@
     <footer>
         <p>&copy Team Ocarina</p>
     </footer>
-    <script type="text/javascript" src="tutorial.js"></script>
+    <script type="text/javascript" src="toogle.js"></script>
 </body>
 </html>
