--- a/Marcas/programacion.html
+++ b/Marcas/programacion.html
@@ -146,7 +146,7 @@
                     </ol>
                 </li>
                 <li>
-                    <h3>Datos de la tabla <em>player_game_round</em></h3>
+                    <h3>Tabla <em>player_game_round</em></h3>
                     <ol>
                         <li><p>Al principio de cada ronda, se almacenan los puntos iniciales de cada jugador en una variable.</p></li>
                         <li><p>Al final de cada ronda, se almacenan los datos relevantes de cada jugador en un diccionario y se añade a una lista de todas las rondas.</p></li>
