--- a/Marcas/programacion.html
+++ b/Marcas/programacion.html
@@ -85,6 +85,7 @@
                 (<em>Cautious</em>, <em>Moderated</em>, <em>Bold</em>) genera un número aleatorio como apuesta de acuerdo a su comportamiento según los puntos disponibles del jugador.
             </p>
             <p>Después, a la hora de pedir cartas, se comprueba el que pueda pedir cartas con la función mencionada anteriormente (<strong>cpu_demand_card()</strong>), y mientras sea True sigue pidiendo.</p>
+            <img src="images/cpu_demand_card_screenshot.avif" alt="cpu_demand_card"/>
         </section>
         <section id="s-player-priority-logic">
             <h2>Establecimiento de la prioridad inicial de los jugadores</h2>
@@ -98,6 +99,7 @@
                 </li>
                 <li><p>Por último se asigna al último jugador de la lista como banca.</p></li>
             </ol>
+            <img src="images/priorityScreenshot.avif" alt="Prioridades"/>
         </section>
         <section id="s-data-bbdd">
             <h2>Inserción en BBDD de los datos del juego</h2>
