Transiciones en tutorial y poniendo el script en el HTML

--- a/Marcas/tutorial.html
+++ b/Marcas/tutorial.html
@@ -136,6 +136,7 @@
     <footer>
         <p>&copy Team Ocarina</p>
     </footer>
+    <script type="text/javascript" src="tutorial.js"></script>
     <script type="text/javascript" src="toogle.js"></script>
 </body>
 </html>
