--- a/Marcas/index.html
+++ b/Marcas/index.html
@@ -12,7 +12,7 @@
         <div id="title-div">
             <h1>Siete y Medio</h1>
             <figure>
-                <img src="images/logo.png" alt="Logo Siete y Medio" />
+                <img id="logo" src="images/logo.png" alt="Logo Siete y Medio" />
             </figure>
         </div>
         <div class="menu-icon" onclick="toggleMenu()">
