Transiciones de las fotos de equipo

--- a/Marcas/equip.html
+++ b/Marcas/equip.html
@@ -33,10 +33,12 @@
             <h2>Miembros de Team Ocarina</h2>
             <ul>
                 <li>
-                    <figure>
-                        <img src="images/Alvaro_Armas.avif" alt="Foto de Álvaro Armas">
-                        <p>Álvaro Armas</p>
-                    </figure>
+                    <div>
+                        <figure id="Alvaro">
+                            <img src="images/Alvaro_Armas.avif" alt="Foto de Álvaro Armas">
+                            <p>Álvaro Armas</p>
+                        </figure>
+                    </div>
                     <h3>Tareas</h3>
                     <ul>
                         <li><p class="small-font">Generación estructura de cartas y jugadores</p></li>
@@ -45,10 +47,12 @@
                     </ul>
                 </li>
                 <li>
-                    <figure>
-                        <img src="images/Alejandro_Lopez.avif" alt="Foto de Alejandro López">
-                        <p>Alejandro López</p>
-                    </figure>
+                    <div>
+                        <figure id="Alejandro">
+                            <img src="images/Alejandro_Lopez.avif" alt="Foto de Alejandro López">
+                            <p>Alejandro López</p>
+                        </figure>
+                    </div>
                     <h3>Tareas</h3>
                     <ul>
                         <li><p class="small-font">Creación y documentación de la máquina virtual en Azure</p></li>
@@ -57,10 +61,12 @@
                     </ul>
                 </li>
                 <li>
-                    <figure>
-                        <img src="images/CarlosMedina.avif" alt="Foto de Carlos Medina">
-                        <p>Carlos Medina</p>
-                    </figure>
+                    <div>
+                        <figure id="Carlos">
+                            <img src="images/CarlosMedina.avif" alt="Foto de Carlos Medina">
+                            <p>Carlos Medina</p>
+                        </figure>
+                    </div>
                     <h3>Tareas</h3>
                     <ul>
                         <li><p class="small-font">Creación e implementación de la base de datos</p></li>
