--- a/Marcas/equip.html
+++ b/Marcas/equip.html
@@ -41,7 +41,7 @@
                     </div>
                     <h3>Tareas</h3>
                     <ul>
-                        <li><p class="small-font">Generación estructura de cartas y jugadores</p></li>
+                        <li><p class="small-font">Generación de la estructura de cartas y jugadores</p></li>
                         <li><p class="small-font">Programación del gameplay en Python</p></li>
                         <li><p class="small-font">Generación de la página Programación</p></li>
                     </ul>
@@ -57,7 +57,7 @@
                     <ul>
                         <li><p class="small-font">Creación y documentación de la máquina virtual en Azure</p></li>
                         <li><p class="small-font">Programación del menú principal en Python</p></li>
-                        <li><p class="small-font">Programación de la página web</p></li>
+                        <li><p class="small-font">Creación del sitio web y programación del tutorial</p></li>
                     </ul>
                 </li>
                 <li>
