--- a/Marcas/index.html
+++ b/Marcas/index.html
@@ -49,7 +49,7 @@
                         <li><figure><p>Espadas</p><img src="images/carta_01_espadas.avif" /></figure></li>
                         <li><figure><p>Bastos</p><img src="images/carta_01_bastos.avif" /></figure></li>
                     </ol>
-                    <p class="disclaimer">En caso de jugar una baraja de póker, por ejemplo, la prioridad de las cartas se establecen según los equivalentes a oros, copas, espadas, bastos.</p>
+                    <p class="disclaimer">En caso de jugar con una baraja de póker, por ejemplo, la prioridad de las cartas se establecen según sus equivalentes: diamantes, corazones, picas, tréboles.</p>
                 </li>
                 <li>
                     <p>El jugador con <strong>mayor prioridad será la banca</strong>, y los turnos irán en <strong>función de la prioridad</strong>, primero el jugador con menor prioridad, luego el siguiente con menor prioridad, y por último la banca.</p>
